--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@babel/core": "^7.0.0",
     "react": "16.4.1",
     "react-native": "0.55.4",
+    "react-native-hide-show-password-input": "^1.0.7",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
