--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "axios": "^0.18.0",
+    "key-mirror": "^1.0.1",
+    "keymirror": "^0.1.1",
     "react": "16.4.1",
     "react-native": "0.55.4",
     "react-native-hide-show-password-input": "^1.0.7",
+    "react-native-router-flux": "file:react-native-router-flux",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0"
   },
